--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "dotenv": "^16.0.3",
     "email-validator": "^2.0.4",
     "express": "^4.18.2",
+    "node-fetch": "^3.3.0",
     "nodemon": "^2.0.20"
   }
 }
