--- a/package.json
+++ b/package.json
@@ -8,12 +8,12 @@
   "license": "MIT",
   "dependencies": {
     "airtable": "^0.11.6",
+    "axios": "^1.3.2",
     "bcrypt": "^5.1.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "email-validator": "^2.0.4",
     "express": "^4.18.2",
-    "node-fetch": "^3.3.0",
     "nodemon": "^2.0.20"
   }
 }
