--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "email-validator": "^2.0.4",
     "express": "^4.18.2",
     "nodemon": "^2.0.20",
+    "password-validator": "^5.3.0",
     "serve": "^14.2.0"
   }
 }
