--- a/package.json
+++ b/package.json
@@ -8,7 +8,6 @@
   "license": "MIT",
   "dependencies": {
     "@prisma/client": "^4.11.0",
-    "airtable": "^0.11.6",
     "axios": "^1.3.2",
     "bcrypt": "^5.1.0",
     "cors": "^2.8.5",
@@ -17,7 +16,6 @@
     "express": "^4.18.2",
     "nodemon": "^2.0.20",
     "password-validator": "^5.3.0",
-    "prisma": "^4.11.0",
-    "serve": "^14.2.0"
+    "prisma": "^4.11.0"
   }
 }
